
== Changelog ==

= 1.2.2.2=
* Fixed up issue with translation files not working properly.
  - Updated languages files.
  - Updated cp-en_GB translation (Enrollment vs Enrolment).
  - Placing translations in /coursepress/languages now works correctly.
* Added additional hooks for developers in class.course.unit.php and class.course.unit.module.php.

= 1.2.2.1=
* Fixed issues caused e-newsletter plugin to show blank page in admin
* Fixed possible issues with MarketPress update
* Fixed issues with clearing cookie data in course checkout message
* Updated translation files

= 1.2.2.0=
* Added new option in settings for PDF report font & Added new fonts
* Updated MarketPress to 2.9.5.4
* More consistent filters and actions for developers (more to come).
* Improved database performance with new instructor 'Privacy' setting (may need to re-add instructors to old courses if you use the privacy option).

= 1.2.1.9=
* Added new settings (Privacy) for controlling visibility of instructor username in the URL
* Resolved issues with cp_get_file_size functions and fatal error if filesize cannot be retrieved

= 1.2.1.8 =
* Fixed issue course excerpt (not showing on course single and archive pages)
* Fixed issue with popup windows (responsive)

= 1.2.1.7 =
* Resolved issue with plugin update

= 1.2.1.6 =
* Fixed bug where visual editor prevented unit elements from saving.
* Fixed bug after duplicating course. Can now edit the course again.

= 1.2.1.5 =
* Fixed issue with instructor's profile avatar shortcode
* Fixed conflicts with bbPress (not showing topics when CoursePress is active)
* Resolved issue with course front-end edit links (caused by empty spaces)

= 1.2.1.4 =
* Fixed issue with incorrect registration of module post type
* Fixed issues with hard coded http:\\ resources (google fonts and images in the theme and plugin)
* Fixed issue with not saving Login Slug