@@ -12,7 +12,7 @@ $coursepress->check_access($course_id);
 ?>
 
 <?php
-do_shortcode('[course_unit_archive_submenu]');
+echo do_shortcode('[course_unit_archive_submenu]');
 ?>
 <h2><?php _e('Notifications', 'cp'); ?></h2>
 <div class="clearfix"></div>
