@@ -1,3 +1,3 @@
 <?php
-do_shortcode( '[course_unit_archive_submenu]' );
+echo do_shortcode( '[course_unit_archive_submenu]' );
 ?> 
