@@ -21,7 +21,7 @@ get_header();
         </div>
 
         <?php
-        do_shortcode('[course_unit_archive_submenu]');
+        echo do_shortcode('[course_unit_archive_submenu]');
         ?>
 
         <div class="discussion-controls">
