@@ -26,7 +26,7 @@ get_header();
         ?>
 
         <?php
-        do_shortcode('[course_unit_archive_submenu]');
+        echo do_shortcode('[course_unit_archive_submenu]');
         ?>
 
         <div class="clearfix"></div>
