@@ -42,7 +42,7 @@ if ( isset( $_POST['new_question_submit'] ) ) {
         </div>
         
         <?php
-        do_shortcode( '[course_unit_archive_submenu]' );
+        echo do_shortcode( '[course_unit_archive_submenu]' );
         ?>
 
         <div class="clearfix"></div>
