@@ -33,7 +33,7 @@ $post = $unit->details;
                 </header><!-- .entry-header -->
                 <div class="instructors-content"></div>
                 <?php
-                do_shortcode('[course_unit_archive_submenu course_id="' . $course_id . '"]');
+                echo do_shortcode('[course_unit_archive_submenu course_id="' . $course_id . '"]');
                 ?>
 
                 <div class="clearfix"></div>
