@@ -12,6 +12,7 @@ CHANGE LOG
   - Updated cp-en_GB translation (Enrollment vs Enrolment).
   - Placing translations in /coursepress/languages now works correctly.
 * Added additional hooks for developers in class.course.unit.php and class.course.unit.module.php.
+* Fixed issue with some shortcodes displaying content out of place on a page.
 
 = 1.2.2.1=
 * Fixed issues caused e-newsletter plugin to show blank page in admin
